--- a/customer-service/src/main/resources/application.yaml
+++ b/customer-service/src/main/resources/application.yaml
@@ -2,7 +2,7 @@ spring:
   application:
     name: customer-service
   datasource:
-    url: jdbc:mysql://localhost:3306/ordersDb?createDatabaseIfNotExist=true
+    url: jdbc:mysql://localhost:3306/customerdb?createDatabaseIfNotExist=true
     username: devuser
     password: password
     driver-class-name: com.mysql.cj.jdbc.Driver
@@ -17,4 +17,4 @@ spring:
         format_sql: true
         show_sql: true
 server:
-  port: 8084
+  port: 8082
